tests/baselines/reference/taggedTemplatesWithTypeArguments2.errors.txt
tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments2.ts(13,30): error TS2345: Argument of type '"hello"' is not assignable to parameter of type 'number'.
tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments2.ts(15,11): error TS2347: Untyped function calls may not accept type arguments.
tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments2.ts(17,30): error TS2345: Argument of type '"hello"' is not assignable to parameter of type 'number'.


==== tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments2.ts (3 errors) ====
    export interface SomethingTaggable {
        <T>(t: TemplateStringsArray, ...args: T[]): SomethingNewable;
    }
    
    export interface SomethingNewable {
        new <T>(...args: T[]): any;
    }
    
    declare const tag: SomethingTaggable;
    
    const a = new tag `${100} ${200}`<string>("hello", "world");
    
    const b = new tag<number> `${"hello"} ${"world"}`(100, 200);
                                 ~~~~~~~
!!! error TS2345: Argument of type '"hello"' is not assignable to parameter of type 'number'.
    
    const c = new tag<number> `${100} ${200}`<string>("hello", "world");
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2347: Untyped function calls may not accept type arguments.
    
    const d = new tag<number> `${"hello"} ${"world"}`<string>(100, 200);
                                 ~~~~~~~
!!! error TS2345: Argument of type '"hello"' is not assignable to parameter of type 'number'.
    
    /**
     * Testing ASI. This should never parse as
     *
     * ```ts
     * new tag<number>;
     * `hello${369}`();
     * ```
     */
    const e = new tag<number>
    `hello`();